--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "react-native-amap-kit",
   "version": "2.0.3",
   "description": "AMAP for react native",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "precommit": "./pre-commit"
   },
+  "pre-commit": [
+    "precommit"
+  ],
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/wd/react-native-amap-kit.git"
@@ -28,6 +33,7 @@
   "devDependencies": {
     "@types/react": "^16.7.17",
     "@types/react-native": "^0.57.19",
+    "pre-commit": "^1.2.2",
     "react": "16.6.3",
     "react-native": "^0.57.8",
     "typescript": "^3.2.2"
