--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "jsx": "react",
     "noEmit": false,
 
-    "outDir": "./lib",
+    "outDir": "./dist",
     "declaration": true,
 
     "moduleResolution": "node",
