--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,12 +19,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.facebook.react:react-native:+'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:23.4.0'
+    implementation 'com.facebook.react:react-native:+'
 
     // version from maven https://search.maven.org/#search%7Cga%7C1%7Ccom.amap.api
-    compile 'com.amap.api:3dmap:6.6.0' //3d 地图
-    compile 'com.amap.api:location:4.4.0' //定位
-    compile 'com.amap.api:search:6.5.0.1' //搜索
+    implementation 'com.amap.api:3dmap:6.6.0' //3d 地图
+    implementation 'com.amap.api:location:4.4.0' //定位
+    implementation 'com.amap.api:search:6.5.0.1' //搜索
 }
